# cpp-project-template

./: CMakeLists.txt  README.md
src/: main.cpp
